# simpler_INA219

./: CMakeLists.txt  README.md  library.properties  license.txt  simpler_INA219.cpp  simpler_INA219.h  simpler_INA219_internal.h
examples/getcurrent/: CMakeLists.txt  readCurrentVoltage.cpp  simplerIna219.ino
